put the project in repository
